@@ -46,6 +46,7 @@ This feature was developed by Jake Howard.
  * Update admin focus outline color to have higher contrast against white backgrounds (Thibaud Colas)
  * Implement latest design for the admin dashboard header (Thibaud Colas, Steven Steinwand)
  * Add base Axe accessibility checker integration within userbar, with error count (Albina Starykova)
+ * Allow configuring Axe accessibility checker integration via `construct_wagtail_userbar` hook (Sage Abdullah)
 
 ### Bug fixes
 
