@@ -1,4 +1,5 @@
 from django.template.loader import render_to_string
+from django.utils.translation import gettext_lazy as _
 
 
 class BaseItem:
@@ -25,13 +26,47 @@ class AdminItem(BaseItem):
 class AccessibilityItem(BaseItem):
     template = "wagtailadmin/userbar/item_accessibility.html"
 
+    def get_axe_configuration(self):
+        return {
+            # See https://github.com/dequelabs/axe-core/blob/develop/doc/context.md.
+            "context": {
+                "include": "body",
+                "exclude": {"fromShadowDOM": ["wagtail-userbar"]},
+            },
+            # See https://github.com/dequelabs/axe-core/blob/develop/doc/API.md#options-parameter.
+            "options": {
+                "runOnly": {
+                    "type": "rule",
+                    "values": [
+                        "empty-heading",
+                        "heading-order",
+                        "p-as-heading",
+                    ],
+                }
+            },
+            # Wagtail-specific translatable custom error messages.
+            "messages": {
+                "empty-heading": _("Avoid empty headings"),
+                "heading-order": _("Use the correct heading order"),
+                "p-as-heading": _("Use heading elements for headings"),
+            },
+        }
+
     def render(self, request):
 
         # Don't render if user doesn't have permission to access the admin area
         if not request.user.has_perm("wagtailadmin.access_admin"):
             return ""
 
-        return super().render(request)
+        return render_to_string(
+            self.template,
+            {
+                "self": self,
+                "request": request,
+                "axe_configuration": self.get_axe_configuration(),
+            },
+            request=request,
+        )
 
 
 class AddPageItem(BaseItem):
